--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.kmnvxh.winditest'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.kmnvxh.winditest"
@@ -63,4 +64,11 @@ dependencies {
     androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
+
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.logging.interceptor
+
+    implementation libs.dagger
+    kapt libs.dagger.compiler
 }
